--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                         <li class="nav-item pe-3 p-1">
                             <button class="btn btn-outline-primary button" id="profile-tab" data-bs-toggle="tab"
                                 data-bs-target="#profile" type="button" role="tab" aria-controls="profile"
-                                aria-selected="false">Bachelor of Applied BlockChain</button>
+                                aria-selected="false">Bachelor of Applied Technologies </button>
                         </li>
                         <li class="nav-item p-1">
                             <button class="btn btn-outline-primary button" id="contact-tab" data-bs-toggle="tab"
                                 data-bs-target="#contact" type="button" role="tab" aria-controls="contact"
-                                aria-selected="false">Masters of Applied Block Chain</button>
+                                aria-selected="false">Masters of Applied Technologies </button>
                         </li>
 
                     </ul>
